# vasak-keyring

./: Cargo.toml  README.md  vasak-keyring.service
pam_vasak_keyring/: Cargo.toml
pam_vasak_keyring/src/: lib.rs
src/: crypto.rs  dbus_api.rs  main.rs
