[workspace]
members = ["pam_vasak_keyring"]
resolver = "2"

[package]
name = "vasak-keyring"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
zeroize = "1"
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
num-bigint = "0.4"
sha2 = "0.10"
